force-app/main/default/objects/Interview_Questions__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Interview Questions</relationshipLabel>
    <relationshipName>Interview_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>